Closed Bug 461029 Opened 17 years ago Closed 17 years ago

Log POP errors to the PR_LOG module

Categories

(MailNews Core :: Networking: POP, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9.1b2

People

(Reporter: standard8, Assigned: standard8)

Details

Attachments

(1 file)

Attached patch The fixSplinter Review
At the moment we have an Error() function in nsPop3Protocol that will display errors to the user. However, this function has no console-based form of logging; this means we don't see what errors the user has been presented with (if using NSPR_LOG_MODULES) and we have no chance of seeing what is going on in xpcshell tests. The attached patch adds a PR_LOG line so that we'll log the error. It still means for xpcshell tests that NSPR_LOG_MODULES needs enabling for pop, but its certainly better than the situation now.
Attachment #344168 - Flags: superreview?(bienvenu)
Attachment #344168 - Flags: review?(bienvenu)
Attachment #344168 - Flags: superreview?(bienvenu)
Attachment #344168 - Flags: superreview+
Attachment #344168 - Flags: review?(bienvenu)
Attachment #344168 - Flags: review+
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.1b2
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: