Bug 461029 Log POP errors to the PR_LOG module. r/sr=bienvenu